# mergesort-parallel

./: CMakeLists.txt  README.md  main.cpp  mergesort.cpp  mergesort.hpp
